wilma-service-api-net.csproj recreated

--- a/wilma-service-api-net/wilma-service-api-tests/packages.config
+++ b/wilma-service-api-net/wilma-service-api-tests/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages xmlns="urn:packages">
-  <package id="FluentAssertions" version="4.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="4.0.1" targetFramework="net45" xmlns="" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" xmlns="" />
+  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" xmlns="" />
 </packages>
