The appropriate Http lib referenced in test project.

--- a/wilma-service-api-net/wilma-service-api-tests/packages.config
+++ b/wilma-service-api-net/wilma-service-api-tests/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages xmlns="urn:packages">
   <package id="FluentAssertions" version="4.0.1" targetFramework="net45" xmlns="" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" xmlns="" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" xmlns="" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" xmlns="" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" xmlns="" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" xmlns="" />
 </packages>
