--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ bin
 release
 wilma-functionaltest/resources/savedStubConfig.xml
 wilma-functionaltest/gepard-run.log
+
+wilma-service-api-net/nuget.exe
