--- a/wilma-service-api-net/WilmaServiceTestConsoleApp/App.config
+++ b/wilma-service-api-net/WilmaServiceTestConsoleApp/App.config
@@ -23,4 +23,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <appSettings>
+    <add key="host" value="localhost" />
+    <add key="port" value="1234" />
+  </appSettings>
+
 </configuration>
