--- a/wilma-service-api-net/wilma-service-api/wilma-service-api-net.csproj
+++ b/wilma-service-api-net/wilma-service-api/wilma-service-api-net.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\wilma-service-api-net.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Threading.Tasks">
