--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -31,6 +31,12 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.12'
     compile group: 'org.codehaus.jackson', name: 'jackson-core-asl', version:'1.7.1'
     compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version:'1.7.1'
+    //note: upgrading this to 4.3 seems to be safe, however above 4.3 it seems dangerous, because:
+    // in 4.4, teh default SSL hostname verifier and default cookie policy now validate certificate identity and cookie domain of origin
+    // against the public suffix list maintained by Mozilla.org https://publicsuffix.org/list
+    // also:  4.3.6: this release HttpClient disables all versions of SSL (including SSLv3) in favor of the TLS protocol by default.
+    // Those users who wish to continue using SSLv3 need to explicitly enable support for it.
+    // help info: http://stackoverflow.com/questions/1828775/how-to-handle-invalid-ssl-certificates-with-apache-httpclient
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.2.3'
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version:'4.2.3'
     compile group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
