Implement time stamp based id generator in browsermob lib - as preparation to remove similar part from Wilma - see #64, prepared to release a new bowsermob-proxy lib for Wilma.

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ bin
 release
 wilma-functionaltest/resources/savedStubConfig.xml
 wilma-functionaltest/gepard-run.log
-
-wilma-service-api-net/nuget.exe
+browsermob-proxy/gradlew
+browsermob-proxy/gradlew.bat
+browsermob-proxy/gradle
