--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version:'7.3.0.v20110203'
     compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version:'7.3.0.v20110203'
     testCompile group: 'junit', name: 'junit', version:'4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
+    testCompile(group: 'org.testng', name: 'testng', version:'6.8.5') {
+        exclude(module: 'junit')
+    }
 }
 
 jar {
