Mayor improvements in Wilma, in connection to #64 - Remove Timestamp Based Message Marker classes -> request.warning.limit and request.error.limit removed, no need for them, as browsermob-proxy took over the responsibilty of it. - Add Property Based Message Marker class -> message.marking (default off) added. In case you need Wilma to identify the messages by adding Wilma's internal ID to the message header, turn it on, otherwise leave it off. (note: In case of stub answer, Wilma will add this info always.) - Add API to handle message.marking. Use /admin/messagemarking/on off to set it, use /public/messagemarking/status to read its status - Minor update for TestServer of Wilma

--- a/wilma-application/modules/wilma-engine/src/main/resources/conf/wilma/wilma.conf.validation.properties
+++ b/wilma-application/modules/wilma-engine/src/main/resources/conf/wilma/wilma.conf.validation.properties
@@ -31,12 +31,6 @@ jms.queue.port=#this >=1 and #this <= 65535
 #the request timeout must be a number
 proxy.request.timeout=#this.matches("^[0-9]+$")
 
-#the warning limit must be a natural number less than or equal to 9999
-request.warning.limit=#this >=0 and #this <= 9999
-
-#the warning limit must be a natural number less than or equal to 9999
-request.error.limit=#this >=0 and #this <= 9999
-
 #the cron expression must not be empty
 log.maintainer.cron=#this not in {null}
 
@@ -81,6 +75,12 @@ sequence.handling.state=#this in {"on", "off"}
 
 #interceptor can take the values 'on' or 'off'
 interceptor=#this in {"on", "off"}
+
+#message logging can take the values 'on' or 'off'
+message.logging=#this in {"on", "off"}
+
+#message marker can take the values 'on' or 'off'
+message.marking=#this in {"on", "off"}
 
 # the default timeout of sequences must be a natural number
 sequence.timeout=#this >=0
