--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -34,12 +34,6 @@ jms.queue.port=16161
 # the value of the request time out in milliseconds
 proxy.request.timeout=20000
 
-# the number of requests that can go through the proxy per second without a warning
-request.warning.limit=9000
-
-# the number of requests that can go through the proxy per second without an error. Requests above this limit are aborted.
-request.error.limit=9999
-
 # maintainer is executed periodically. Time period can be given with cron expression.
 log.maintainer.cron=0 0/30 * * * *
 
@@ -72,6 +66,9 @@ safeguard.responseMessageWriter.ONlimit=1000
 
 # turns message logging on/off when Wilma starts
 message.logging=on
+
+# should Wilma Message ID be added to the message request headers or not
+message.marking=off
 
 # Relative folder path of the stub descriptor XML configuration files from project root.
 stub.descriptors.path=
