Investigating #66. Turned out that the request is not feasible/meaningful. On the other hand, as side effect of the investigation, some clean-up possibility was identified and applied (TooManyRequestException class can be eliminated because of the changes made in V1.3)

--- a/wilma-functionaltest/src/main/resources/wilma-test.properties
+++ b/wilma-functionaltest/src/main/resources/wilma-test.properties
@@ -4,7 +4,7 @@
 # suppress inspection "UnusedProperty" for whole file
 
 # the wilma proxy where the request should go through
-wilma.host=192.168.1.2
+#wilma.host=localhost
 wilma.port.external=9092
 wilma.port.internal=1234
 
