Preparation of solution for #4 - it is possible to use postfixes for the message names, and add extra prefix to identify the Wilma instance. Still need additional integration tests and examples, and extending the documentation in order to use these new features (file name prefix and postfix).

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -122,6 +122,9 @@ sequence.timeout=9000
 wilma.readme.url=http://epam.github.io/Wilma/
 wilma.readme.text=Wilma Documentation
 
+# prefix text for Wilma instance
+wilma.instance.prefix=
+
 #Relative path to admin hosts file from project root.
 #The admin hosts file should contain one hostname or IP per line.
 wilma.admin.hosts.file=
