make Wilma -> Wilma Message Search ActiveMQ communication (hostname) configurable - allowing to place Wilma Message Search app in other machine than Wilma this change somehow in connection to #4, and increases the scalability of Wilma

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -28,6 +28,9 @@ internal.wilma.request.buffer.size=81920
 #the size of the response buffer used by the web application in bytes
 internal.wilma.response.buffer.size=204800
 
+# host used to communicate with the indexing application via an activemq broker, default is localhost
+jms.queue.host=
+
 # port used to communicate with the indexing application via an activemq broker
 jms.queue.port=16161
 
