--- a/wilma-message-search/modules/wilma-message-search-engine/message.search.conf.properties
+++ b/wilma-message-search/modules/wilma-message-search-engine/message.search.conf.properties
@@ -20,6 +20,9 @@
 # the port used by the web application
 webapp.port=9093
 
+# host used to communicate with message producers via an activemq broker, defaults to localhost
+jms.broker.host=
+
 # port used to communicate with message producers via an activemq broker
 jms.broker.port=16161
 
