Major update for #67. Without changing the proxy (existing 1.3 version), when the message is going though the proxy, it is possible to update the request body by using interceptors. Proxy is updated (experimental mode) to V1.4. By using this version we expect that changing the proxy response body by using interceptors become possible.

--- a/wilma-test/wilma-test-client/wilma.testclient.properties
+++ b/wilma-test/wilma-test-client/wilma.testclient.properties
@@ -5,9 +5,9 @@ client.proxy=true
 # the wilma proxy where the request should go through
 wilma.host=<specify_wilma_test_instance_host_here>
 wilma.port=<specify_wilma_test_instance_port_here>
-# the content type of the message to be sent (can be xml, fastinfoset)
+# the content type of the message to be sent (can be xml, application/fastinfoset, text/plain)
 content.type=application/xml
-#the content type of the response(can be xml, fastinfoset)
+#the content type of the response(can be xml, application/fastinfoset, text/plain)
 accept.header=application/xml
 # the content encoding of the request body (can be gzip)
 content.encoding=
