--- a/browsermob-proxy/build.gradle
+++ b/browsermob-proxy/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile group: 'org.codehaus.jackson', name: 'jackson-core-asl', version:'1.7.1'
     compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version:'1.7.1'
     //note: upgrading this to 4.3 seems to be safe, however above 4.3 it seems dangerous, because:
-    // in 4.4, teh default SSL hostname verifier and default cookie policy now validate certificate identity and cookie domain of origin
+    // in 4.4, the default SSL hostname verifier and default cookie policy now validate certificate identity and cookie domain of origin
     // against the public suffix list maintained by Mozilla.org https://publicsuffix.org/list
     // also:  4.3.6: this release HttpClient disables all versions of SSL (including SSLv3) in favor of the TLS protocol by default.
     // Those users who wish to continue using SSLv3 need to explicitly enable support for it.
