- fix of a major error in proxy part (pls note that browsermob-proxy-for-wilma lib must be upgraded!) - initial test of header remover capability - added new response message volatility parameter into configuration file - default is off

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -37,6 +37,9 @@ jms.queue.port=16161
 # the value of the request time out in milliseconds
 proxy.request.timeout=20000
 
+# enable/disable response volatility (changing the proxy response on-the-fly), default: disable
+proxy.response.volatile=false
+
 # maintainer is executed periodically. Time period can be given with cron expression.
 log.maintainer.cron=0 0/30 * * * *
 
