* .Net lib API extension to handle new response volatility settings added (see #67)

--- a/wilma-service-api-net/wilma-service-api/wilma-service-api-net.csproj
+++ b/wilma-service-api-net/wilma-service-api/wilma-service-api-net.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ServiceCommClasses\LocalhostControlStatus.cs" />
     <Compile Include="ServiceCommClasses\LoggingStatus.cs" />
     <Compile Include="ServiceCommClasses\OperationMode.cs" />
+    <Compile Include="ServiceCommClasses\ResponseVolatilityStatus.cs" />
     <Compile Include="StubClasses\Condition.cs" />
     <Compile Include="StubClasses\ConditionDescriptor.cs" />
     <Compile Include="StubClasses\DialogDescriptor.cs" />
