--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,6 @@ wilma-test/wilma-test-client/gradle
 wilma-test/wilma-test-client/gradlew*
 wilma-service-api/gradle
 wilma-service-api/gradlew*
+wilma-service-api-net/wilma-service-api/nuget.exe
+
 
