--- a/config/docker/Dockerfile-Wilma
+++ b/config/docker/Dockerfile-Wilma
@@ -13,9 +13,10 @@ RUN \
   apt-get install -y openjdk-7-jre && \
   apt-get install -y wget && \
   rm -rf /var/lib/apt/lists/* && \
-  wget https://github.com/epam/Wilma/releases/download/V1.3.111/wilma-application-1.3.111.zip && \
-  unzip wilma-application-1.3.111.zip && \
-  rm -f wilma-application-1.3.111.zip
+  wget https://github.com/epam/Wilma/releases/download/V1.4.137/wilma-application-1.4.137.zip && \
+  unzip wilma-application-1.4.137.zip && \
+  mv wilma-1.4.137.jar wilma.jar && \
+  rm -f wilma-application-1.4.137.zip
 
 COPY start_wilma.sh /data/
 RUN \
