--- a/config/docker/Dockerfile-Wilma_and_Wilma_Message_Search
+++ b/config/docker/Dockerfile-Wilma_and_Wilma_Message_Search
@@ -11,9 +11,10 @@ RUN \
   apt-get upgrade -y && \
   apt-get install -y openjdk-7-jdk && \
   rm -rf /var/libs/apt/lists/* && \
-  wget https://github.com/epam/Wilma/releases/download/V1.3.111/wilma-message-search-1.3.111.zip && \
-  unzip -o wilma-message-search-1.3.111.zip && \
-  rm -f wilma-message-search-1.3.111.zip
+  wget https://github.com/epam/Wilma/releases/download/V1.4.137/wilma-message-search-1.4.137.zip && \
+  unzip -o wilma-message-search-1.4.137.zip && \
+  mv wilma-message-search-1.4.137.jar wilma-message-search.jar && \
+  rm -f wilma-message-search-1.4.137.zip
 
 COPY start_wilma_and_message_search.sh /data/
 RUN \
