- further #9 driven refactors - SequenceHandler interface class is changed (this causes version increase to 1.5) - btw only its path was changed, but that is enough

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ wilma-functionaltest/resources/savedStubConfig.xml
 wilma-functionaltest/gepard-run.log
 wilma-functionaltest/gradle
 wilma-functionaltest/gradlew*
+wilma-functionaltest/resources/sequence/src/*.class
+wilma-functionaltest/resources/stubconfig/jar/src/*.class
 browsermob-proxy/gradlew
 browsermob-proxy/gradlew.bat
 browsermob-proxy/gradle
