--- a/wilma-functionaltest/src/main/resources/gepard.properties
+++ b/wilma-functionaltest/src/main/resources/gepard.properties
@@ -41,8 +41,8 @@ system-under-test.version=Unknown
 #-----------------------------------------------------------------------------------------------------------------
 #gepard.build.tag=NotSpecified
 gepard.public.result=Gepard_report
-gepard.public.path=http://${wilma.host}:8080/jenkins/job/wilma-autotest/${gepard.build.tag}
-gepard.public.enabled=true
+gepard.public.path=http://${wilma.host}/jenkins/job/wilma-autotest/${gepard.build.tag}
+gepard.public.enabled=false
 
 #-----------------------------------------------------------------------------------------------------------------
 # Other common Gepard settings - do not touch this part
