--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ wilma-functionaltest/gradle
 wilma-functionaltest/gradlew*
 wilma-functionaltest/resources/sequence/src/*.class
 wilma-functionaltest/resources/stubconfig/jar/src/*.class
+wilma-functionaltest/classes
 browsermob-proxy/gradlew
 browsermob-proxy/gradlew.bat
 browsermob-proxy/gradle
