--- a/wilma-extras/short.circuit/gradle/wrapper/gradle-wrapper.properties
+++ b/wilma-extras/short.circuit/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Feb 17 20:38:46 CET 2016
+#Wed Mar 09 21:51:26 CET 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.5-all.zip
