New Wilma config property, and its handlers:
proxy.connect.keepalive=false

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -40,6 +40,10 @@ proxy.request.timeout=20000
 # enable/disable response volatility (changing the proxy response on-the-fly), default: disable
 proxy.response.volatile=false
 
+# Whether keep HTTPS CONNECT requests alive or not, default: false.
+# .NET Web App based clients may need it to be set as true.
+proxy.connect.keepalive=false
+
 # maintainer is executed periodically. Time period can be given with cron expression.
 log.maintainer.cron=0 0/30 * * * *
 
