--- a/wilma-extras/replicator/build.gradle
+++ b/wilma-extras/replicator/build.gradle
@@ -5,6 +5,7 @@ apply from: '../../common.gradle'
 
 dependencies {
     compile files("../../wilma-application/release/wilma-$version" + '.jar')
-    compile group: 'commons-httpclient', name: 'commons-httpclient', version:'3.1'
+    //this httpclient need to be in synch with httpclient used by the proxy lib of wilma
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
